# advent_of_code

./: CMakeLists.txt  README.md  main.cpp  main.py
2025/: solutions.py
solutions/2024/inc/: advent_day.h  day_four.h  day_one.h  day_three.h  day_two.h
solutions/2024/src/: advent_day.cpp  day_four.cpp  day_one.cpp  day_three.cpp  day_two.cpp
